--- a/src/components/lightbox/lightbox.scss
+++ b/src/components/lightbox/lightbox.scss
@@ -11,3 +11,18 @@
 .lightbox_image {
   position: fixed;
 }
+
+.lightbox_close {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  width: 50px;
+  height: 50px;
+  background: url("cross.svg") transparent no-repeat;
+  background-size:50px 50px;
+  transition: transform .3s;
+  cursor: pointer;
+  &:hover {
+    transform: scale(1.2);
+  }
+}
