--- a/src/components/lightbox/lightbox.scss
+++ b/src/components/lightbox/lightbox.scss
@@ -26,3 +26,41 @@
     transform: scale(1.2);
   }
 }
+
+.lightbox_loading {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  width: 40px;
+  height: 40px;
+  padding: 10px;
+  margin-left: -20px;
+  margin-top: -20px;
+  background-color: #444444;
+  background-color: rgba(#000000, 0.5);
+  border-radius: 40px;
+  &:after {
+    content: '';
+    display: block;
+    width: 20px;
+    height: 20px;
+    background-color: #ffffff;
+    border-radius: 20px;
+    animation: lightbox-loading 1s ease infinite;
+  }
+}
+
+@keyframes lightbox-loading {
+  0% {
+    opacity: 0.5;
+    transform: scale(.75);
+  }
+  50% {
+    opacity: 1;
+    transform: scale(1);
+  }
+  100% {
+    opacity: 0.5;
+    transform: scale(.75);
+  }
+}
