--- a/src/components/lightbox/lightbox.scss
+++ b/src/components/lightbox/lightbox.scss
@@ -50,6 +50,14 @@
   }
 }
 
+.lightbox-fade-enter-active, .lightbox-fade-leave-active {
+  transition: opacity 0.3s;
+}
+
+.lightbox-fade-enter, .lightbox-fade-leave-active {
+  opacity: 0;
+}
+
 @keyframes lightbox-loading {
   0% {
     opacity: 0.5;
